--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "create-application-template",
-  "version": "0.1.1",
+  "version": "0.2.1",
   "description": "provides a configured application template for you to build upon",
   "main": "index.js",
+  "bin": {
+    "create-application-template": "bin/create-application-template.js"
+  },
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --env BUNDLER_ENV=dev",
     "build": "webpack --config webpack/webpack.config.js --env BUNDLER_ENV=prod BUNDLER_WITH_PROFILING=false",
@@ -25,6 +28,10 @@
     "eslint",
     "styelint"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/daveKontro/create-application-template.git"
+  },
   "author": "Dave Kontrovitz",
   "license": "MIT",
   "proxy": "http://localhost:3000",
@@ -36,7 +43,8 @@
     "dotenv-flow": "4.1.0",
     "husky": "9.0.11",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "yargs": "17.7.2"
   },
   "devDependencies": {
     "@babel/core": "7.23.7",
