--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-application-template",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "description": "provides a configured application template for you to build upon",
   "main": "index.js",
   "bin": {
@@ -36,7 +36,7 @@
   "license": "MIT",
   "proxy": "http://localhost:3000",
   "engines": {
-    "node": "18"
+    "node": ">=18.19.1"
   },
   "dependencies": {
     "concurrently": "8.2.2",
