--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-application-template",
-  "version": "0.6.2",
+  "version": "0.6.3",
   "description": "provides a configured application template for you to build upon",
   "main": "index.js",
   "bin": {
@@ -26,7 +26,7 @@
     "webpack",
     "jest",
     "eslint",
-    "styelint",
+    "stylelint",
     "javascript"
   ],
   "repository": {
