--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-application-template",
-  "version": "0.6.6",
+  "version": "0.7.0",
   "description": "provides a configured application template for you to build upon",
   "main": "index.js",
   "bin": {
@@ -62,6 +62,7 @@
     "@types/node": "20.11.19",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "@types/webpack-env": "1.18.4",
     "@typescript-eslint/eslint-plugin": "6.5.0",
     "@typescript-eslint/parser": "6.5.0",
     "babel-jest": "29.7.0",
