--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@types/react",
       "@types/react-dom",
       "@types/jest",
+      "@types/webpack-env",
       "jest-extended",
       "@testing-library/jest-dom"
     ],
