switch primary styling method to styled-components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@types/react-dom",
       "@types/jest",
       "@types/webpack-env",
+      "@types/styled-components",
       "jest-extended",
       "@testing-library/jest-dom"
     ],
