--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-application-template",
-  "version": "0.8.1",
+  "version": "0.9.0",
   "description": "provides a configured application template for you to build upon",
   "main": "index.js",
   "bin": {
@@ -15,14 +15,17 @@
     "dev": "concurrently \"npm run test:watch\" \"npm run start\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx,json}\"",
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx,json}\"",
-    "stylelint": "npx stylelint \"src/**/*.css\"",
-    "stylelint:fix": "npx stylelint --fix \"src/**/*.css\"",
+    "stylelint": "npx stylelint \"src/**/*.{js,ts}\"",
+    "stylelint:fix": "npx stylelint --fix \"src/**/*.{js,ts}\"",
+    "stylelint:css": "npx stylelint \"src/**/*.css\"",
+    "stylelint:css:fix": "npx stylelint --fix \"src/**/*.css\"",
     "prepare": "husky"
   },
   "keywords": [
     "template",
     "react",
     "typescript",
+    "styled-components",
     "webpack",
     "jest",
     "eslint",
@@ -45,6 +48,7 @@
     "husky": "9.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "styled-components": "6.1.12",
     "yargs": "17.7.2"
   },
   "devDependencies": {
@@ -62,6 +66,7 @@
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
+    "@types/styled-components": "5.1.34",
     "@types/webpack-env": "1.18.5",
     "@typescript-eslint/eslint-plugin": "6.5.0",
     "@typescript-eslint/parser": "6.5.0",
@@ -84,8 +89,10 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-extended": "4.0.2",
+    "jest-styled-components": "7.2.0",
     "jest-watch-typeahead": "2.2.2",
     "mini-css-extract-plugin": "2.9.0",
+    "postcss-styled-components": "0.2.1",
     "react-refresh": "0.14.2",
     "style-loader": "4.0.0",
     "stylelint": "16.5.0",
