--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-application-template",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "provides a configured application template for you to build upon",
   "main": "index.js",
   "bin": {
@@ -72,6 +72,7 @@
     "@typescript-eslint/parser": "6.5.0",
     "babel-jest": "29.7.0",
     "babel-loader": "9.1.3",
+    "babel-plugin-transform-require-context": "0.1.1",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
     "confusing-browser-globals": "1.0.11",
     "copy-webpack-plugin": "12.0.2",
