--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-application-template",
-  "version": "0.9.2",
+  "version": "0.10.0",
   "description": "provides a configured application template for you to build upon",
   "main": "index.js",
   "bin": {
@@ -15,8 +15,8 @@
     "dev": "concurrently \"npm run test:watch\" \"npm run start\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx,json}\"",
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx,json}\"",
-    "stylelint": "npx stylelint \"src/**/*.{js,ts}\"",
-    "stylelint:fix": "npx stylelint --fix \"src/**/*.{js,ts}\"",
+    "stylelint": "npx stylelint \"src/styles/**/*.{js,ts}\"",
+    "stylelint:fix": "npx stylelint --fix \"src/styles/**/*.{js,ts}\"",
     "stylelint:css": "npx stylelint \"src/**/*.css\"",
     "stylelint:css:fix": "npx stylelint --fix \"src/**/*.css\"",
     "prepare": "husky"
