--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-application-template",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "provides a configured application template for you to build upon",
   "main": "index.js",
   "bin": {
@@ -43,6 +43,7 @@
     "node": ">=18.19.1"
   },
   "dependencies": {
+    "browserslist": "4.24.2",
     "concurrently": "8.2.2",
     "dotenv-flow": "4.1.0",
     "husky": "9.0.11",
@@ -80,6 +81,7 @@
     "css-minimizer-webpack-plugin": "7.0.0",
     "dotenv-webpack": "8.1.0",
     "eslint": "8.56.0",
+    "eslint-plugin-compat": "6.0.1",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-jsx-a11y": "6.8.0",
@@ -99,6 +101,7 @@
     "stylelint": "16.5.0",
     "stylelint-config-recess-order": "5.0.1",
     "stylelint-config-standard": "36.0.0",
+    "stylelint-no-unsupported-browser-features": "8.0.1",
     "terser-webpack-plugin": "5.3.10",
     "typescript": "5.4.5",
     "webpack": "5.94.0",
