--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-application-template",
-  "version": "1.2.4",
+  "version": "1.3.0",
   "description": "provides a configured application template for you to build upon",
   "main": "index.js",
   "bin": {
@@ -48,6 +48,7 @@
     "concurrently": "8.2.2",
     "dotenv-flow": "4.1.0",
     "husky": "9.0.11",
+    "polished": "4.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "styled-components": "6.1.12",
