--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-application-template",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "provides a configured application template for you to build upon",
   "main": "index.js",
   "bin": {
@@ -75,6 +75,7 @@
     "@typescript-eslint/parser": "6.5.0",
     "babel-jest": "29.7.0",
     "babel-loader": "9.1.3",
+    "babel-plugin-styled-components": "2.1.4",
     "babel-plugin-transform-require-context": "0.1.1",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
     "confusing-browser-globals": "1.0.11",
