--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-application-template",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "provides a configured application template for you to build upon",
   "main": "index.js",
   "bin": {
@@ -33,6 +33,7 @@
     "stylelint",
     "javascript"
   ],
+  "url": "https://www.createapplicationtemplate.com/",
   "repository": {
     "type": "git",
     "url": "https://github.com/daveKontro/create-application-template.git"
@@ -107,12 +108,14 @@
     "stylelint-config-standard": "36.0.0",
     "stylelint-no-unsupported-browser-features": "8.0.4",
     "terser-webpack-plugin": "5.3.12",
+    "ts-node": "10.9.2",
     "typescript": "5.8.2",
     "webpack": "5.98.0",
     "webpack-cli": "6.0.1",
     "webpack-dev-server": "5.2.0",
     "webpack-manifest-plugin": "5.0.0",
     "webpack-merge": "6.0.1",
+    "webpack-shell-plugin-next": "2.3.2",
     "whatwg-fetch": "3.6.20"
   }
 }
