--- a/.babelrc
+++ b/.babelrc
@@ -14,11 +14,14 @@
       "@babel/plugin-transform-runtime",
       {
         "regenerator": true
-      },
-      "react-refresh/babel"
-    ]
+      }
+    ],
+    "babel-plugin-react-compiler"
   ],
   "env": {
+    "development": {
+      "plugins": ["react-refresh/babel"]
+    },
     "test": {
       // to mock webpack's require.context in jest
       "plugins": ["transform-require-context"]
