--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "dotenv-flow": "4.1.0",
     "husky": "9.1.7",
     "polished": "4.3.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "styled-components": "6.1.15",
     "yargs": "17.7.2"
   },
@@ -68,14 +68,15 @@
     "@testing-library/user-event": "14.6.1",
     "@types/jest": "29.5.14",
     "@types/node": "20.12.12",
-    "@types/react": "18.3.2",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "19.1.13",
+    "@types/react-dom": "19.1.9",
     "@types/styled-components": "5.1.34",
     "@types/webpack-env": "1.18.8",
     "@typescript-eslint/eslint-plugin": "6.5.0",
     "@typescript-eslint/parser": "6.5.0",
     "babel-jest": "29.7.0",
     "babel-loader": "10.0.0",
+    "babel-plugin-react-compiler": "19.1.0-rc.3",
     "babel-plugin-styled-components": "2.1.4",
     "babel-plugin-transform-require-context": "0.1.1",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
@@ -90,7 +91,7 @@
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.4",
-    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-hooks": "6.0.0-rc.2",
     "html-webpack-plugin": "5.6.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.7.0",
