--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-application-template",
-  "version": "2.4.0",
+  "version": "2.4.1-beta.0",
   "description": "provides a configured application template for you to build upon",
   "main": "index.js",
   "bin": {
